libs/modkit/macros/tests/ui/fail/lifecycle_unknown_arg.stderr
error: expected lifecycle args: entry="...", stop_timeout="...", await_ready[=true|false]
 --> tests/ui/fail/lifecycle_unknown_arg.rs:3:62
  |
3 | #[module(name="x", caps=[stateful], lifecycle(entry="serve", foo="bar"))]
  |                                                              ^^^^^^^^^
